--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,8 @@ phpstan.neon
 /.twig-cs-fixer.php
 /.twig-cs-fixer.cache
 ###< vincentlanglet/twig-cs-fixer ###
+
+.env
+.env.test
+.env.local
+.env.dev
