--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     },
     "license": "UNLICENSED",
     "private": true,
-    "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress"
-    },
+  "scripts": {
+    "dev": "encore dev && npm run build-admin",
+    "watch": "encore dev --watch",
+    "build": "encore production && npm run build-admin",
+    "build-admin": "cd assets/admin && npm install && npm run build"
+  },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.3",
