--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "license": "UNLICENSED",
     "private": true,
   "scripts": {
-    "dev": "encore dev && npm run build-admin",
+    "dev": "encore dev && ddev ssh && bin/console sulu:admin:update-build",
     "watch": "encore dev --watch",
-    "build": "encore production && npm run build-admin",
-    "build-admin": "cd assets/admin && npm install && npm run build"
+    "build": "encore production && ddev ssh && bin/console sulu:admin:update-build"
   },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
