--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     },
     "license": "UNLICENSED",
     "private": true,
-  "scripts": {
-    "dev": "encore dev && ddev ssh && bin/console sulu:admin:update-build",
-    "watch": "encore dev --watch",
-    "build": "encore production && ddev ssh && bin/console sulu:admin:update-build"
-  },
+    "scripts": {
+        "dev-server": "encore dev-server",
+        "dev": "encore dev && npm run build-admin",
+        "watch": "encore dev --watch",
+        "build": "encore production --progress"
+    },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.3",
