--- a/config/routes/sulu_admin.yaml
+++ b/config/routes/sulu_admin.yaml
@@ -116,3 +116,7 @@ sulu_form_api:
     type: rest
     resource: "@SuluFormBundle/Resources/config/routing_api.yml"
     prefix: /admin/api
+sulu_article_api:
+    type: rest
+    resource: "@SuluArticleBundle/Resources/config/routing_api.yml"
+    prefix: /admin/api
