--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,6 +17,11 @@
         <server name="SYMFONY_PHPUNIT_VERSION" value="9.5" />
         <!-- https://symfony.com/doc/current/components/phpunit_bridge.html#configuration -->
         <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak"/>
+
+        <!-- ###+ sulu/article-bundle ### -->
+        <env name="ELASTICSEARCH_HOST" value="127.0.0.1:9200"/>
+        <env name="ELASTICSEARCH_INDEX" value="su_articles"/>
+        <!-- ###- sulu/article-bundle ### -->
     </php>
 
     <testsuites>
