--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,4 +1,4 @@
-name: isabelleanno2025
+name: isabelleovinganno.com
 type: symfony
 docroot: public
 php_version: "8.3"
@@ -16,7 +16,6 @@ composer_version: "2"
 web_environment: []
 corepack_enable: false
 disable_upload_dirs_warning: true
-
 # Key features of DDEV's config.yaml:
 
 # name: <projectname> # Name of the project, automatically provides
@@ -63,7 +62,7 @@ disable_upload_dirs_warning: true
 
 # host_xhgui_port: 8142
 # Can be used to change the host binding port of the xhgui
-# application. Rarely used; only when port conflict and 
+# application. Rarely used; only when port conflict and
 # bind_all_ports is used (normally with router disabled)
 
 # xhprof_enabled: false  # Set to true to enable Xhprof and "ddev start" or "ddev restart"
